--- a/public_html/index.html
+++ b/public_html/index.html
@@ -350,8 +350,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 web">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-4.jpg" class="img-fluid"
-                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <img src="assets/imgs/web-4.jpg" class="img-fluid">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-4.jpg"></a>
                                 <div class="text-holder">
@@ -361,7 +360,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 advertising">
+                    <!-- <div class="col-md-6 col-lg-4 advertising">
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-1.jpg" class="img-fluid"
                                 alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
@@ -385,8 +384,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 advertising new">
+                    </div> -->
+                    <!-- <div class="col-md-6 col-lg-4 advertising new">
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-3.jpg" class="img-fluid"
                                 alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
@@ -410,13 +409,12 @@
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
                     <div class="col-md-6 col-lg-4 branding new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-1.jpg" class="img-fluid"
-                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <img src="assets/imgs/branding-1.jpg" class="img-fluid">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-1.jpg"></a>
                                 <div class="text-holder">
@@ -427,8 +425,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 branding">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-2.jpg" class="img-fluid"
-                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <img src="assets/imgs/branding-2.jpg" class="img-fluid">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-2.jpg"></a>
                                 <div class="text-holder">
@@ -440,8 +437,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 branding new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-3.jpg" class="img-fluid"
-                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <img src="assets/imgs/branding-3.jpg" class="img-fluid">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-3.jpg"></a>
                                 <div class="text-holder">
@@ -452,8 +448,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 branding">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-4.jpg" class="img-fluid"
-                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <img src="assets/imgs/branding-4.jpg" class="img-fluid">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-4.jpg"></a>
                                 <div class="text-holder">
@@ -463,7 +458,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 branding">
+                    <!-- <div class="col-md-6 col-lg-4 branding">
                         <div class="portfolio-item">
                             <img src="assets/imgs/branding-5.jpg" class="img-fluid"
                                 alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
@@ -475,7 +470,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
