--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Walker Fiene landing page">
+    <meta name="description" content="Walker Fiene landing">
     <meta name="author" content="Devcrud">
     <title>Walker Fiene</title>
     <!-- font icons -->
@@ -315,7 +315,7 @@
                     <div class="col-md-6 col-lg-4 web new">
                         <div class="portfolio-item">
                             <img src="assets/imgs/web-1.jpg" class="img-fluid"
-                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                                alt="Image not rendered">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-1.jpg"></a>
                                 <div class="text-holder">
@@ -327,7 +327,7 @@
                     <div class="col-md-6 col-lg-4 web new">
                         <div class="portfolio-item">
                             <img src="assets/imgs/web-2.jpg" class="img-fluid"
-                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                                alt="Image not rendered">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-2.jpg"></a>
                                 <div class="text-holder">
@@ -339,7 +339,7 @@
                     <div class="col-md-6 col-lg-4 advertising new">
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-2.jpg" class="img-fluid"
-                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                                alt="Image not rendered">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/advertising-2.jpg"></a>
                                 <div class="text-holder">
@@ -350,7 +350,8 @@
                     </div>
                     <div class="col-md-6 col-lg-4 web">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-4.jpg" class="img-fluid">
+                            <img src="assets/imgs/web-4.jpg" class="img-fluid"
+                                alt="Image not rendered">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-4.jpg"></a>
                                 <div class="text-holder">
@@ -372,11 +373,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-md-6 col-lg-4 web new">
                         <div class="portfolio-item">
                             <img src="assets/imgs/web-3.jpg" class="img-fluid"
-                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                                alt="Image not rendered">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-3.jpg"></a>
                                 <div class="text-holder">
@@ -384,7 +385,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                     <!-- <div class="col-md-6 col-lg-4 advertising new">
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-3.jpg" class="img-fluid"
@@ -397,8 +398,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 advertising new">
+                    </div> -->
+                    <!-- <div class="col-md-6 col-lg-4 advertising new">
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-4.jpg" class="img-fluid"
                                 alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
@@ -409,12 +410,13 @@
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
 
-                    </div>
+                    </div> -->
                     <div class="col-md-6 col-lg-4 branding new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-1.jpg" class="img-fluid">
+                            <img src="assets/imgs/branding-1.jpg" class="img-fluid"
+                                alt="Image not rendered">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-1.jpg"></a>
                                 <div class="text-holder">
@@ -423,9 +425,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 branding">
+                    <!-- <div class="col-md-6 col-lg-4 branding">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-2.jpg" class="img-fluid">
+                            <img src="assets/imgs/branding-2.jpg" class="img-fluid"
+                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-2.jpg"></a>
                                 <div class="text-holder">
@@ -434,10 +437,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-md-6 col-lg-4 branding new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-3.jpg" class="img-fluid">
+                            <img src="assets/imgs/branding-3.jpg" class="img-fluid"
+                                alt="Image not rendered">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-3.jpg"></a>
                                 <div class="text-holder">
@@ -446,9 +450,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 branding">
+                    <!-- <div class="col-md-6 col-lg-4 branding">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-4.jpg" class="img-fluid">
+                            <img src="assets/imgs/branding-4.jpg" class="img-fluid"
+                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-4.jpg"></a>
                                 <div class="text-holder">
@@ -457,7 +462,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- <div class="col-md-6 col-lg-4 branding">
                         <div class="portfolio-item">
                             <img src="assets/imgs/branding-5.jpg" class="img-fluid"
