--- a/public_html/index.html
+++ b/public_html/index.html
@@ -294,7 +294,7 @@
                         </div>
                         <div class="col-7 text-left py-3">
                             <h1 class="text-danger font-weight-bold font40">2k</h1>
-                            <p class="text-light mb-1">Coffee Drank</p>
+                            <p class="text-light mb-1">Coffees Drank</p>
                         </div>
                     </div>
                 </div>
