--- a/public_html/index.html
+++ b/public_html/index.html
@@ -223,6 +223,11 @@
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 85%"
                                     aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
+                            <h6>TypeScript</h6>
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 90%"
+                                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <h6>Python</h6>
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 80%"
@@ -233,6 +238,7 @@
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 90%"
                                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
+                            
                             <h6>React</h6>
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 90%"
