--- a/public_html/index.html
+++ b/public_html/index.html
@@ -342,7 +342,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 advertising new">
+                    <!-- <div class="col-md-6 col-lg-4 advertising new">
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-2.jpg" class="img-fluid"
                                 alt="Image not rendered">
@@ -353,7 +353,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-md-6 col-lg-4 web">
                         <div class="portfolio-item">
                             <img src="assets/imgs/web-4.jpg" class="img-fluid"
